Add solution to Day4Part1